--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,8 +4,9 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "za.co.aws.welfare"
-        minSdkVersion 15
+        minSdkVersion 16
         targetSdkVersion 27
+        multiDexEnabled true
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -20,9 +21,13 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:support-compat:27.1.1'
     implementation 'com.android.support:appcompat-v7:27.1.1'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-messaging:17.3.0'
+    implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -30,3 +35,5 @@ dependencies {
     api 'com.google.android.gms:play-services-auth:15.0.1'
     api 'com.google.android.gms:play-services-location:15.0.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
