--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -34,6 +37,9 @@ dependencies {
     api 'com.mcxiaoke.volley:library:1.0.19'
     api 'com.google.android.gms:play-services-auth:16.0.1'
     api 'com.google.android.gms:play-services-location:16.0.0'
+
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    implementation "android.arch.lifecycle:viewmodel:1.1.1"
 }
 
 apply plugin: 'com.google.gms.google-services'
