--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     api 'com.google.android.gms:play-services-auth:16.0.1'
     api 'com.google.android.gms:play-services-location:16.0.0'
 
+    implementation 'com.google.android:flexbox:1.1.0'
+
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel:2.0.0'
 }
