--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.ResidentActivity"></activity>
+        <activity android:name=".PetActivity"></activity>
+        <activity android:name=".activity.ResidentActivity" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -30,11 +31,11 @@
         </activity>
         <activity
             android:name=".activity.LoginActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name" />
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
 
         <receiver android:name=".notification.NotificationPublisher" />
 
