--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.PetActivity" android:label="@string/title_pet"/>
-        <activity android:name=".activity.ResidenceActivity" android:label="@string/title_res"/>
+        <activity android:name=".activity.PetActivity" android:label="@string/title_pet"  android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".activity.ResidenceActivity" android:label="@string/title_res"  android:windowSoftInputMode="adjustPan"/>
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -35,7 +35,8 @@
         <activity
             android:name=".activity.HomeActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            android:windowSoftInputMode="adjustPan"/>
 
         <receiver android:name=".notification.NotificationPublisher" />
 
