--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.PetActivity" android:label="@string/title_pet"  android:windowSoftInputMode="adjustPan"/>
-        <activity android:name=".activity.ResidenceActivity" android:label="@string/title_res"  android:windowSoftInputMode="adjustPan"/>
+        <activity android:name=".activity.AddReminder"></activity>
+        <activity
+            android:name=".activity.PetActivity"
+            android:label="@string/title_pet"
+            android:windowSoftInputMode="adjustPan" />
+        <activity
+            android:name=".activity.ResidenceActivity"
+            android:label="@string/title_res"
+            android:windowSoftInputMode="adjustPan" />
 
         <uses-library
             android:name="org.apache.http.legacy"
@@ -36,7 +43,7 @@
             android:name=".activity.HomeActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:windowSoftInputMode="adjustPan"/>
+            android:windowSoftInputMode="adjustPan" />
     </application>
 
 </manifest>
