Added reminder title.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.AddReminderActivity"></activity>
+        <activity android:name=".activity.AddReminderActivity"
+            android:label="@string/reminder_title"/>
         <activity
             android:name=".activity.PetActivity"
             android:label="@string/title_pet"
